# 2ndBrain

./: .copier-answers.yml  .env.template  .gitignore  AGENTS.md  README.md  install.sh  main.py  migrate_vault.py  pyproject.toml  restart.sh  setup-gpg-pass.sh  switcher.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _test.yml  ci.yml
.zed/: settings.json  tasks.json
0.1.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.1.0/.doctrees/: how-to.doctree  reference.doctree  tutorials.doctree
0.1.0/.doctrees/tutorials/: installation.doctree
0.1.0/_api/: brain.html
0.1.0/_sources/: _api.rst.txt  reference.md.txt
0.1.0/explanations/: architecture.html  decisions.html
0.1.0/explanations/decisions/: 0001-record-architecture-decisions.html  0002-switched-to-python-copier-template.html  0003-secret-storage-and-account-separation.html
0.1.0/how-to/: contribute.html  setup_rclone.html  setup_slack_app.html
0.1.0/tutorials/: installation.html
0.2.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.2.0/.doctrees/explanations/: security.doctree
0.2.0/.doctrees/how-to/: setup_rclone.doctree
0.2.0/.doctrees/reference/: prompts.doctree
0.2.0/.doctrees/tutorials/: quickstart.doctree
0.2.0/_api/: brain.html
0.2.0/_sources/: reference.md.txt
0.2.0/_sources/how-to/: setup_rclone.md.txt
0.2.0/_sources/tutorials/: installation.md.txt
0.2.0/_static/: custom.css
0.2.0/explanations/: architecture.html  decisions.html  security.html
0.2.0/explanations/decisions/: 0001-record-architecture-decisions.html  0002-switched-to-python-copier-template.html  0003-secret-storage-and-account-separation.html  0004-two-call-router-agent-pattern.html  0005-metadata-only-vault-queries.html  0006-shared-processor-module.html
0.2.0/how-to/: contribute.html  setup_rclone.html  setup_slack_app.html
0.2.0/reference/: prompts.html
0.2.0/tutorials/: installation.html  quickstart.html
0.3.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.3.0/.doctrees/: genindex.doctree
0.3.0/.doctrees/how-to/: contribute.doctree  setup_rclone.doctree  (+1 more)
0.3.0/_api/: brain.html
0.3.0/explanations/: architecture.html  decisions.html  security.html
0.3.0/how-to/: contribute.html  setup_obsidian.html  setup_rclone.html  setup_slack_app.html
0.3.0/reference/: prompts.html
0.3.0/tutorials/: installation.html  quickstart.html
0.4.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.4.0/.doctrees/: explanations.doctree  index.doctree  reference.doctree
0.4.0/_api/: brain.html
0.4.0/explanations/: architecture.html  decisions.html  security.html
0.4.0/how-to/: contribute.html  setup_obsidian.html  setup_rclone.html  setup_slack_app.html
0.4.0/reference/: prompts.html
0.4.0/tutorials/: installation.html  quickstart.html
docs/: architecture-decisions.md  conf.py  explanations.md  how-to.md  setup_rclone.md  setup_slack_app.md
docs/explanations/: architecture.md  security.md
docs/how-to/: encrypt-env-credentials.md  setup_obsidian.md  setup_rclone.md  zed-and-claude.md
docs/reference/: prompts.md
docs/tutorials/: installation.md  quickstart.md
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
main/.doctrees/: _api.doctree  explanations.doctree  how-to.doctree  index.doctree  tutorials.doctree
main/_api/: brain.html
main/_static/: documentation_options.js
main/explanations/: architecture.html  decisions.html  security.html
main/how-to/: contribute.html  setup_obsidian.html  setup_rclone.html  setup_slack_app.html
main/reference/: prompts.html
main/tutorials/: installation.html  quickstart.html
migrate_old_vault/: migrate_prompt.md
scripts/: brain.py  install.sh  migrate-dates-to-datetime.py  pull-vault-templates.sh  restart.sh  setup-env-creds.sh  setup-gpg-pass.sh  setup-systemd-creds.sh  slack_prompt.md  start-brain.sh  uninstall.sh
scripts/migrate_old_vault/: migrate_vault.py
service-units/: brain.service  rclone-2ndbrain-bisync.service  rclone-2ndbrain-bisync.timer  rclone-2ndbrain.service
src/brain/: __init__.py  __main__.py  app.py  briefing.py  credentials.py  listener.py  migrate.py  processor.py  prompt.md  reclassify_prompt.md  vault.py
tests/: test_cli.py  test_migrate.py  test_vault_edit.py
(+69 files in other folders)
